--- a/catalog.html
+++ b/catalog.html
@@ -153,8 +153,8 @@
           <h2 class="catalog-result-title">Найдено гостиниц: 38</h2>
 
           <select class="select-control" aria-label="Сортировка" name="hotels-found">
-            <option value="popular">Сначала популярные</option>
             <option value="cheap" selected>Сначала дешевые</option>
+            <option value="popular">Сначала популярные</option>
             <option value="expensive">Сначала дорогие</option>
           </select>
           <div class="sorting-buttons-container">
@@ -178,34 +178,29 @@
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <div class="hotel-card-container">
-              <table class="hotel-card-price">
-                <tr>
-                  <td>Гостиница</td>
-                  <td>От 4000 ₽</td>
-                </tr>
-              </table>
+              <p class="hotel">Гостиница</p>
+              <p class="hotel-price">От 4000 ₽</p>
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
               <div class="hotel-card-button button button button-ranking">Рейтинг: 8,5</div>
-
             </div>
           </li>
           <li class="hotel-card">
@@ -215,28 +210,24 @@
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <div class="hotel-card-container">
-              <table class="hotel-card-price">
-                <tr>
-                  <td>Гостиница</td>
-                  <td>От 5000 ₽</td>
-                </tr>
-              </table>
+              <p class="hotel">Гостиница</p>
+              <p class="hotel-price">От 5000 ₽</p>
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-selected button-favourite" href="#">В избранном</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
@@ -251,24 +242,20 @@
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <div class="hotel-card-container">
-              <table class="hotel-card-price">
-                <tr>
-                  <td>Гостиница</td>
-                  <td>От 2500 ₽</td>
-                </tr>
-              </table>
+              <p class="hotel">Гостиница</p>
+              <p class="hotel-price">От 2500 ₽</p>
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
@@ -283,20 +270,16 @@
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <div class="hotel-card-container">
-              <table class="hotel-card-price">
-                <tr>
-                  <td>Гостиница</td>
-                  <td>От 1500 ₽</td>
-                </tr>
-              </table>
+              <p class="hotel">Гостиница</p>
+              <p class="hotel-price">От 1500 ₽</p>
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
@@ -305,6 +288,7 @@
             </div>
           </li>
         </ul>
+
         <div class="paginaion-container">
           <ul class="pagination">
             <li class="pagination-item pagination-item-current">
