--- a/index.html
+++ b/index.html
@@ -68,23 +68,25 @@
               <li class="advantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-housing">
                   <h4 class="advantages-title">Жильё</h4>
-                  <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
-                    всё как в кино!</p>
+                  <p class="advantages-description">Рекомендуем пожить <br>
+                    в настоящем мотеле, <br>
+                    всё как в кино!
+                  </p>
                 </div>
               </li>
               <li class="advantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-eating">
                   <h4 class="advantages-title">Еда</h4>
-                  <p class="advantages-description">Всегда заказывайте топовый фирменный
-                    бургер, вы не
-                    разочаруетесь!</p>
+                  <p class="advantages-description">Всегда заказывайте <br>
+                    топовый фирменный бургер, вы не разочаруетесь!
+                  </p>
                 </div>
               </li>
               <li class="advantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-souvenir">
                   <h4 class="advantages-title">Сувениры</h4>
-                  <p class="advantages-description">Не только китайского, но и настоящего
-                    местного производства!
+                  <p class="advantages-description">Не только китайского, <br>
+                    но и настоящего местного производства!
                   </p>
                 </div>
               </li>
@@ -94,7 +96,9 @@
             <img class="advantages-image image" src="images/advantage/bridge.jpg" width="800" height="384"
               alt="Мост дьявола">
             <div class="advantages-items advantages-bridge">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <h3 class="advantages-title">Там есть <br>
+                мост дьявола
+              </h3>
               <p class="advantages-description-number">— №2 —</p>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
@@ -125,7 +129,8 @@
       <section class="search">
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-basic">Укажите предполагаемые даты поездки, <br>
-          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          и мы покажем вам лучшие предложения гостиниц в Седоне&nbsp;&nbsp;
+        </p>
         <a class="button button-basic button-search" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
     </main>
