--- a/catalog.html
+++ b/catalog.html
@@ -183,20 +183,20 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
@@ -215,20 +215,20 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-selected button-favourite" href="#">В избранном</a>
               <span class="hotel-card-stars">
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
@@ -247,16 +247,16 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
@@ -275,12 +275,12 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
