--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <ul class="navigation-list navigation-search">
           <li class="navigation-item navigation-item-search">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск.</span>
             </a>
           </li>
           <li class="navigation-item navigation-item-favourite">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">Избранное.</span>
             </a>
           </li>
           <li class="navigation-item navigation-favourites">
@@ -141,7 +141,7 @@
           <p class="newsletter-description">Только полезная информация и никакого спама, <br>
             честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden" for="newsletter-email">Email</label>
+            <label class="visually-hidden" for="newsletter-email">E-mail.</label>
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
             <button class="button button-additional button-newsletter" type="submit">Подписаться</button>
