--- a/catalog.html
+++ b/catalog.html
@@ -26,12 +26,12 @@
         <ul class="navigation-list navigation-search">
           <li class="navigation-item navigation-item-search">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск.</span>
             </a>
           </li>
           <li class="navigation-item navigation-item-favourite">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">Избранное.</span>
             </a>
           </li>
           <li class="navigation-item navigation-favourites">
@@ -46,7 +46,7 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
-              <span class="visually-hidden">Главная</span>
+              <span class="visually-hidden">Главная.</span>
               <svg class="breadcrumbs-icon" fill="currentColor" aria-hidden="true" focusable="false" width="13"
                 height="12" viewBox="0 0 13 12" xmlns="http://www.w3.org/2000/svg">
                 <path d="m6.11 0-6 5.8V12h12V5.8l-6-5.8Zm5 11h-10V6.2l5-4.8 5 4.8V11Z" />
@@ -123,9 +123,9 @@
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
               <div class="range">
                 <div class="range-wrapper-inputs">
-                  <label for="min-price" class="visually-hidden">от</label>
+                  <label for="min-price" class="visually-hidden">Минимальная цена.</label>
                   <input class="range-input" type="number" value="0" name="min-price" id="min-price">
-                  <label for="max-price" class="visually-hidden">от</label>
+                  <label for="max-price" class="visually-hidden">Максимальная цена.</label>
                   <input class="range-input" type="number" value="9000" name="max-price" id="max-price">
                 </div>
                 <div class="range-scale">
@@ -141,7 +141,7 @@
               </div>
             </fieldset>
             <fieldset class="catalog-filter-group filter-buttons">
-              <legend class="catalog-filter-title visually-hidden">Выбрать:</legend>
+              <legend class="catalog-filter-title visually-hidden">Выбрать.</legend>
               <button class="button button-additional button-apply" type="submit">Применить</button>
               <button class="button button-reset" type="button">Сбросить</button>
             </fieldset>
@@ -159,13 +159,13 @@
           </select>
           <div class="sorting-buttons-container">
             <a href="#" class="button button-view button-view-cards button-view-active">
-              <span class="visually-hidden">Показать карточки</span>
+              <span class="visually-hidden">Показать карточки.</span>
             </a>
             <a href="#" class="button button-view button-view-slides">
-              <span class="visually-hidden">Показать слайдшоу</span>
+              <span class="visually-hidden">Показать слайдшоу.</span>
             </a>
             <a class="button button-view button-view-list" href="#">
-              <span class="visually-hidden">Показать список</span>
+              <span class="visually-hidden">Показать список.</span>
             </a>
           </div>
 
@@ -337,7 +337,7 @@
           <p class="newsletter-description">Только полезная информация и никакого спама, <br>
             честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email" class="visually-hidden">Email</label>
+            <label for="newsletter-email" class="visually-hidden">E-mail.</label>
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
             <button class="button button-additional button-newsletter" type="submit">Подписаться</button>
@@ -351,7 +351,7 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a class="footer-social-link" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">ВКонтакте</span>
+                  <span class="visually-hidden">ВКонтакте.</span>
                   <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="25" height="14"
                     viewBox="0 0 25 14" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -361,7 +361,7 @@
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-link" href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Телеграм</span>
+                  <span class="visually-hidden">Телеграм.</span>
                   <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="18" height="16"
                     viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -371,7 +371,7 @@
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
+                  <span class="visually-hidden">Youtube.</span>
                   <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="23" height="18"
                     viewBox="0 0 23 18" xmlns="http://www.w3.org/2000/svg">
                     <path
