--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a class="footer-social-link" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">ВКонтакте</span>
+                  <span class="visually-hidden">ВКонтакте.</span>
                   <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="25" height="14"
                     viewBox="0 0 25 14" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -165,7 +165,7 @@
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-link" href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Телеграм</span>
+                  <span class="visually-hidden">Телеграм.</span>
                   <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="18" height="16"
                     viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -175,7 +175,7 @@
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
+                  <span class="visually-hidden">Youtube.</span>
                   <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="23" height="18"
                     viewBox="0 0 23 18" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -212,7 +212,7 @@
       <div class="modal-title-container">
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <button class="modal-close-button" type="button">
-          <span class="visually-hidden">Закрыть</span>
+          <span class="visually-hidden">Закрыть.</span>
         </button>
       </div>
 
@@ -223,7 +223,7 @@
             <input class="modal-field date-field" placeholder="27 апреля 2020" type="text" name="arrival-date"
               id="arrival-date" required>
             <button class="button modal-button date-button" type="button">
-              <span class="visually-hidden">Календарь</span>
+              <span class="visually-hidden">Календарь.</span>
             </button>
           </div>
           <p class="date-message date-message-error">Мы не можем отправить вас в прошлое.</p>
@@ -235,7 +235,7 @@
             <input class="modal-field date-field" placeholder="1 сентября 2021" type="text" name="departure-date"
               id="departure-date" required>
             <button class="button modal-button date-button" type="button">
-              <span class="visually-hidden">Календарь</span>
+              <span class="visually-hidden">Календарь.</span>
             </button>
           </div>
           <p class="date-message">На эти даты есть свободные номера. Пока есть.</p>
@@ -245,8 +245,8 @@
           <label class="search-parameter adults" for="adults-input">Взрослые:</label>
           <div class="tourists-number-form">
             <span class="select-number-form">
-              <button class="button modal-button minus-plus-button" type="button">
-                <span class="visually-hidden">Минус</span>
+              <button class="button modal-button minus-button" type="button">
+                <span class="visually-hidden">Минус.</span>
                 <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="1" viewBox="0 0 13 1"
                     xmlns="http://www.w3.org/2000/svg">
@@ -256,8 +256,8 @@
               </button>
               <input class="modal-field number-input" type="number" value="2" name="adults-input" id="adults-input"
                 required>
-              <button class="button modal-button minus-plus-button" type="button">
-                <span class="visually-hidden">Плюс</span>
+              <button class="button modal-button plus-button" type="button">
+                <span class="visually-hidden">Плюс.</span>
                 <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13"
                     xmlns="http://www.w3.org/2000/svg">
@@ -278,8 +278,8 @@
             </span>
 
             <span class="select-number-form">
-              <button class="button modal-button minus-plus-button" type="button">
-                <span class="visually-hidden">Минус</span>
+              <button class="button modal-button minus-button" type="button">
+                <span class="visually-hidden">Минус.</span>
                 <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="1" viewBox="0 0 13 1"
                     xmlns="http://www.w3.org/2000/svg">
@@ -288,8 +288,8 @@
                 </span>
               </button>
               <input class="modal-field number-input" type="number" value="1" name="children-input" id="children-input">
-              <button class="button modal-button minus-plus-button" type="button">
-                <span class="visually-hidden">Плюс</span>
+              <button class="button modal-button plus-button" type="button">
+                <span class="visually-hidden">Плюс.</span>
                 <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13"
                     xmlns="http://www.w3.org/2000/svg">
